[package]
name = "dmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dmap"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = {  version = "0.21.0", features = ["extension-module", "indexmap"] }
numpy = "0.21.0"
indexmap = "1.9.3"
zerocopy = "0.7.35"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
itertools = "0.10.5"

[[bench]]
name = "io_benchmarking"
harness = false