[package]
name = "darn-dmap"
version = "0.8.0"
edition = "2021"
rust-version = "1.85.1"
authors = ["Remington Rohel"]
description = "SuperDARN DMAP file format I/O"
repository = "https://github.com/SuperDARNCanada/dmap"
license = "LGPL-3.0-or-later"
keywords = ["SuperDARN"]
categories = ["parser-implementations", "science"]
include = ["src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dmap"

# cdylib is needed when building the optional Python extension module.
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
ndarray = "0.16"
pyo3 = { version = "0.26.0", optional = true, features = ["extension-module", "indexmap", "abi3-py38"] }
numpy = { version = "0.26.0", optional = true }
indexmap = "2.3.0"
itertools = "0.13.0"
rayon = "1.10.0"
thiserror = "1.0.63"
zerocopy = { version = "0.7.35", features = ["byteorder"] }
lazy_static = "1.5.0"
bzip2 = "0.4.4"
paste = "1.0.15"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
