[build-system]
requires = ["maturin>=1,<2", "numpy<3"]
build-backend = "maturin"

[project]
name = "darn-dmap"
version = "0.4.0"
requires-python = ">=3.8"
authors = [
    { name = "Remington Rohel" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
description = "SuperDARN DMAP file format I/O"
readme = "README.md"
dependencies = ["numpy<3"]
license = "LGPL-3.0-or-later"

[project.urls]
Repository = "https://github.com/SuperDARNCanada/dmap"

[tool.maturin]
python-source = "python"
bindings = "pyo3"
profile = "release"
compatibility = "manylinux2014"
auditwheel = "repair"
strip = true
